     - Supports putting templates into a directory called 'templates' below the theme directory OR having templates in the root.
     - Supports syntax like:  cms_thme:[theme;]template_name[;section]
       - if the theme name is not specified then the 'current' theme {cms_set_theme} will be used.

PressRoom v1.0
  - New core example module to demonstrate module development techniques.  It allows managing and displaying time limited content.

CMSContentManager - 1.2
  - REMOVED: Gets rid of secure options, flag output and bulk functionality
  - REMOVED: The design dropdown option in the content editor.
  - CHANGE: modified to use CMS_ROOT_URL
  - CHANGE: Change connection timeout to 1 second.
  - CHANGE: processing to be a little more friendly to some environments wrt. content-size header.
  - FEATURE: Adds expand/functionality into reorder content (TODO: needs styling)
  - FEATURE: Adds new 'add child here' icon in the content list.
  - FEATURE: Find functionality in content list can now search on page alias and url.
  - FEATURE: Allow setting the default content page from within the page edit form (for pages where it is possible, and permission allows)
  - FEATURE: New bulk action for when page_template_list is correctly defined in the config to allow setting bulk pages to a template resource.
  - FEATURE: When page_template_list is defined hide the set design and template bulk action
  - FEATURE: Each page can now display some info in the dynamic tooltip that is displayed.
  - FEATURE: Now display a warning in editcontent when locking is disabled
  - FEATURE: Now set the subtitle properly, which helps with the admin theme's title tag
  - FEATURE: Now the template list will include all LayoutManager templates AND all page templates detected from themes in the /assets/themes directory.
  - REMOVED: all support for events, now uses hooks

Installation Assistant - v1.4
  - Now require at least CMSMS version 2.0.1 to upgrade
  - Now test the default character set